DTSPB-4856 remove log and disabled annotation